Multicast text description changes

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -476,12 +476,12 @@
     "GIVE-ORGANISATION-NAME": "Navngiv organisation",
     "GIVE-ORGANISATION-NAME-PLACEHOLDER": "F.eks. 'Aarhus Kommune'",
     "GIVE-MULTICAST-NAME":"Navngiv multicast",
-    "GIVE-MULTICAST-ADDRESS": "Angiv multicast adressen",
-    "GIVE-MULTICAST-NETWORK-KEY": "Angiv multicast network session key",
-    "GIVE-MULTICAST-APPLICATION-KEY": "Angiv multicast application session key",
+    "GIVE-MULTICAST-ADDRESS": "Angiv multicast (mcAddr)",
+    "GIVE-MULTICAST-NETWORK-KEY": "Angiv multicast network session key (mcNwkSKey)",
+    "GIVE-MULTICAST-APPLICATION-KEY": "Angiv multicast application session key (mcAppSKey)",
     "GIVE-MULTICAST-FRAMECOUNTER": "Angiv frame counter",
     "GIVE-MULTICAST-DATARATE": "Angiv data rate",
-    "GIVE-MULTICAST-IOTDEVICES": "Angiv IoT Devices",
+    "GIVE-MULTICAST-IOTDEVICES": "Angiv IoT-enheder",
     "GIVE-MULTICAST-FREQUENCY": "Angiv frekvens (Hz)",
     "GIVE-MULTICAST-GROUP-TYPE": "Angiv multicast gruppe type",
     "GIVE-MULTICAST-PERIODICITY": "Angiv multicast ping-slot periodicitet",
@@ -529,7 +529,11 @@
       "SELECTALLDEVICES": "Vælg alle",
       "DESELECTALLDEVICES": "Fravælg alle",
       "NO-PORT-OR-PAYLOAD": "Angiv en port og en payload",
-      "ONLY-LORAWAN": "* På nuværende tidspunkt er det kun muligt at tilknytte LoRaWAN devices."
+      "ONLY-LORAWAN": "* På nuværende tidspunkt er det kun muligt at tilknytte LoRaWAN devices.",
+      "HINT-8-HEXA": "8-tegns hexadecimal værdi",
+      "HINT-32-HEXA": "32-tegns hexadecimal værdi",
+      "HINT-DATA-RATE": "Data rate, der skal bruges ved overførsel af multicast-frames. Se venligst LoRaWAN Regional Parameters specifikationen for gyldige værdier",
+      "HINT-FREQUENCY": "Frekvensen, der skal bruges ved transmission af multicast-frames. Se venligst LoRaWAN Regional Parameters specifikationen for gyldige værdier"
     },
     "SIGFOX": {
       "TITLE": "Sigfox specifikke felter",
