--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -135,6 +135,8 @@
   "DATATARGET": {
     "DETAILS": "Detaljer",
     "SAVE": "Gem datatarget",
+    "CREATE": "Opret",
+    "READMORE": "Læs mere",
     "DESCRIPTION": "Beskrivelse",
     "URL": "URL",
     "TIMEOUT": "Timeout",
@@ -147,11 +149,17 @@
     "NO-PAYLOADDECODER": "Ingen payload decoder",
     "IOTDEVICE": "IoT enhed(er)",
     "NO-RELATIONS": "ingen tilknyttede relationer",
+    "TENANT": "Tenant",
+    "NO-TENANT": "Ingen Tenant angivet",
+    "CONTEXT": "Context",
+    "NO-CONTEXT": "Ingen Context angivet",
     "AUTHORIZATIONHEADER": "Authorization header",
     "NO-AUTHORIZATIONHEADER": "Ingen Authorization header angivet",
     "ADD-TO-OPENDATADK": "Send data til OpenDataDK",
     "OPENDATA-DK": "OpenDataDK", 
-    "NO-OPENDATA-DK": "Der er ikke oprettet nogen datadeling med Open Data DK endnu"
+    "NO-OPENDATA-DK": "Der er ikke oprettet nogen datadeling med Open Data DK endnu",
+    "HTTP_PUSH": "HTTP Push",
+    "FIWARE": "FIWARE"
   },
   "OPENDATADK": {
     "QUESTION": {
@@ -841,5 +849,19 @@
   "Forbidden resource": "Du har ikke rettigheder til at foretage denne handling",
   "GENERIC_HTTP": "Generisk HTTP",
   "LORAWAN": "LoRaWAN",
-  "SIGFOX": "Sigfox"
+  "SIGFOX": "Sigfox",
+
+  "FIWARE": {
+      "QUESTION": {
+        "GIVE-DATATARGET-CONTEXTBROKER-URL": "Angiv datatargets 'context broker' URL",
+        "GIVE-DATATARGET-CONTEXTBROKER-URL-PLACEHOLDER": "https://contextBroker.dk/",
+        "GIVE-DATATARGET-TENANT": "Angiv 'tenant'",
+        "GIVE-DATATARGET-TENANT-INFO": "hvis tom, vil default tenant blive brugt",
+        "GIVE-DATATARGET-TENANT-PLACEHOLDER": "Tenant's navn",
+        "GIVE-DATATARGET-CONTEXT": "Angiv 'context'",
+        "GIVE-DATATARGET-CONTEXT-INFO": "hvis tom, skal den angives i 'payload'",
+        "GIVE-DATATARGET-CONTEXT-PLACEHOLDER": "https://os2iot/context-file.json"
+      }
+
+  }
 }
