Added device model error codes

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -711,7 +711,9 @@
     "WRONG-SERVICE-PROFILE": "Dine devices har forkert service profile. Vælg devices som har samme service profile som din multicast.",
     "ID-DOES-NOT-EXIST": "Id'et findes ikke",
     "APPLICATION-DOES-NOT-EXIST": "Den tilhørende applikation findes ikke",
-    "FAILED-TO-CREATE-OR-UPDATE-IOT-DEVICE": "Enheden kunne ikke oprettes eller opdateres"
+    "FAILED-TO-CREATE-OR-UPDATE-IOT-DEVICE": "Enheden kunne ikke oprettes eller opdateres",
+    "DEVICE-MODEL-ORGANIZATION-DOES-NOT-MATCH": "Organisationsid'et på device modellen matcher ikke den tilhørende applikation",
+    "DEVICE-MODEL-DOES-NOT-EXIST": "Device model findes ikke"
   },
   "PROFILES": {
     "NAME": "LoRaWAN profiler",
