--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -8,7 +8,8 @@
     "EDIT": "Redigér",
     "APPLICATION": "Applikation",
     "HTTP": "Generisk HTTP",
-    "SAVE": "Gem"
+    "SAVE": "Gem",
+    "to": "til"
   },
   "NAV": {
     "DASHBOARD": "Dashboard",
@@ -172,7 +173,7 @@
     "AUTHORIZATIONHEADER": "Authorization header",
     "NO-AUTHORIZATIONHEADER": "Ingen Authorization header angivet",
     "ADD-TO-OPENDATADK": "Send data til OpenDataDK",
-    "OPENDATA-DK": "OpenDataDK", 
+    "OPENDATA-DK": "OpenDataDK",
     "NO-OPENDATA-DK": "Der er ikke oprettet nogen datadeling med Open Data DK endnu",
     "HTTP_PUSH": "HTTP Push",
     "FIWARE": "FIWARE"
@@ -240,7 +241,9 @@
     "ACTIVE": "Sidst aktiv",
     "DATA": "Data(24 timer)",
     "ORGANISATION": "Organisation",
-    "NAME": "Navn"
+    "NAME": "Navn",
+    "RSSI": "RSSI (dBm)",
+    "SNR": "SNR (dB)"
   },
   "LORA-GATEWAY-TABLE": {
     "NAME": "Navn",
@@ -308,7 +311,9 @@
     "DELETE": "Slet",
     "EDIT": "Redigér",
     "SHOW-OPTIONS": "Håndter IoT enhed",
-    "BATTERY-ERROR-MESSAGE":"Den valgte teknologi understøtter ikke batteristatus"
+    "BATTERY-ERROR-MESSAGE":"Den valgte teknologi understøtter ikke batteristatus",
+    "NOT-SUPPORTED": "Ikke understøttet",
+    "NOT-AVAILABLE": "N/A"
   },
   "DATATARGET-TABLE-ROW": {
     "DELETE": "Slet datatarget",
