Made admin/users so there is two tables. One for existing users and one for users applying. Next step is to make the approve and reject buttons and functionality.

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -794,6 +794,8 @@
     }
   },
   "USERS": {
+    "AWAITING-USERS": "Afventende brugere",
+    "EXISTING-USERS": "Tilknyttede brugere",
     "SAVE": "Gem",
     "NAME": "Navn",
     "EMAIL": "Email",
@@ -805,7 +807,9 @@
     "LOGIN": "Sidst aktiv",
     "TABLE-ROW": {
       "EDIT": "Redigér",
-      "DELETE": "Slet"
+      "DELETE": "Slet",
+      "APPROVE": "Godkend",
+      "REJECT": "Afvis"
     },
     "FORM": {
       "NAME": "Indtast det fulde navn på brugeren",
