--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -8,7 +8,9 @@
     "EDIT": "Redigér",
     "APPLICATION": "Applikation",
     "HTTP": "Generisk HTTP",
-    "SAVE": "Gem"
+    "SAVE": "Gem",
+    "NAME": "Navn",
+    "DESCRIPTION": "Beskrivelse"
   },
   "NAV": {
     "DASHBOARD": "Dashboard",
@@ -117,6 +119,29 @@
       "ERROR": "Fejl",
       "EMPTY": "Der er ingen enheder at vise endnu",
       "FILEFORMATERRORMESSAGE": "Forkert filformat, upload en .csv fil"
+    },
+    "STATUS": {
+      "NONE": "-",
+      "IN-OPERATION": "I drift",
+      "PROJECT": "Projekt",
+      "PROTOTYPE": "Prototype",
+      "OTHER": "Andet"
+    },
+    "DETAILS": "Detaljer",
+    "METADATA-FIELD": {
+      "STATUS": "Status",
+      "START-DATE": "Startdato",
+      "END-DATE": "Slutdato",
+      "CATEGORY": "Kategori",
+      "OWNER": "Ejer",
+      "CONTACT-PERSON": "Kontaktperson",
+      "CONTACT-EMAIL": "Kontaktmail",
+      "CONTACT-PHONE": "Kontakttelefon",
+      "PERSONAL-DATA": "Persondata",
+      "HARDWARE": "Hardware",
+      "HARDWARE-PLACEHOLDER": "Angiv hvad der bruges af sensorer/hardware, samt model",
+      "CONTROLLED-PROPERTY": "Data",
+      "DEVICE-TYPE": "Forbindelsesteknologi"
     }
   },
   "GATEWAY": {
@@ -172,7 +197,7 @@
     "AUTHORIZATIONHEADER": "Authorization header",
     "NO-AUTHORIZATIONHEADER": "Ingen Authorization header angivet",
     "ADD-TO-OPENDATADK": "Send data til OpenDataDK",
-    "OPENDATA-DK": "OpenDataDK", 
+    "OPENDATA-DK": "OpenDataDK",
     "NO-OPENDATA-DK": "Der er ikke oprettet nogen datadeling med Open Data DK endnu",
     "HTTP_PUSH": "HTTP Push",
     "FIWARE": "FIWARE"
@@ -291,7 +316,8 @@
   "IOT-DEVICE-TYPES": {
     "GENERIC_HTTP": "Generisk HTTP",
     "LORAWAN": "LoRaWAN",
-    "SIGFOX": "Sigfox"
+    "SIGFOX": "Sigfox",
+    "OTHER": "Andet"
   },
   "ACTIVITY": {
     "NEVER": "Aldrig set"
@@ -445,10 +471,6 @@
     "CREATE-IOT-DEVICE": "IoT-enhed",
     "DEVICE-MODEL-SELECT": "Tilknyt en device model til enheden",
     "DEVICE-MODEL-SELECT-NON": "Ingen device model valgt",
-    "GIVE-APPLICATION-NAME": "Navngiv applikation",
-    "APPLICATION-NAME-PLACEHOLDER": "Applikationens navn",
-    "GIVE-APPLICATION-DESCRIPTION": "Applikationens beskrivelse",
-    "APPLICATION-DESCRIPTION-PLACEHOLDER": "Kort beskrivelse af applikationen",
     "TRANSMISSION-PROTOCOL": "Vælg transmissionsprotokol",
     "ESTABLISH-CONNECTION-TO-DEVICE": "Opret forbindelse til din enhed",
     "ADD-MORE-INFO-ABOUT-DEVICE": "Tilføj yderlige informationer om din enhed",
@@ -594,6 +616,21 @@
     },
     "PERMISSION": {
       "SELECT-PERMISSION": "Vælg brugergruppe"
+    },
+    "APPLICATION": {
+      "NAME-PLACEHOLDER": "Navngiv applikationen",
+      "DESCRIPTION-PLACEHOLDER": "Lav kort beskrivelse af applikationen",
+      "STATUS-PLACEHOLDER": "NO-PLACEHOLDER-DELETE-ME",
+      "START-DATE-PLACEHOLDER": "Dato berører ikke funktionalitet i OS2IoT",
+      "END-DATE-PLACEHOLDER": "Dato berører ikke funktionalitet i OS2IoT",
+      "CATEGORY-PLACEHOLDER": "Angiv den/de kategorier applikationen tilhører. Fx indeklima eller tracking",
+      "OWNER-PLACEHOLDER": "Angiv afdeling eller lignende, der ejer data",
+      "CONTACT-PERSON-PLACEHOLDER": "Angiv navn og eventuel afdeling på ansvarlig medarbejder",
+      "CONTACT-EMAIL-PLACEHOLDER": "Angiv mailadresse på ansvarlig medarbejder",
+      "CONTACT-PHONE-PLACEHOLDER": "Angiv telefonnummer på ansvarlig medarbejder",
+      "PERSONAL-DATA-PLACEHOLDER": "Markér, hvis data i applikationen indeholder personoplysninger. Berører ikke funktionalitet i OS2iot",
+      "CONTROLLED-PROPERTY-PLACEHOLDER": "Angiv hvilke datatyper der opsamles",
+      "DEVICE-TYPE-PLACEHOLDER": "Angiv hvilke forbindelsesteknologier, der benyttes"
     }
   },
   "QUESTION-LORA-GATEWAY": {
