--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -730,7 +730,9 @@
     "FAILED-TO-CREATE-OR-UPDATE-IOT-DEVICE": "Enheden kunne ikke oprettes eller opdateres",
     "DEVICE-MODEL-ORGANIZATION-DOES-NOT-MATCH": "Organisationsid'et på device modellen matcher ikke den tilhørende applikation",
     "DEVICE-MODEL-DOES-NOT-EXIST": "Device model findes ikke",
-    "DUPLICATE-METADATA-KEY": "Metadata må ikke indeholde den samme nøgle flere gange"
+    "DUPLICATE-METADATA-KEY": "Metadata må ikke indeholde den samme nøgle flere gange",
+    "INVALID-KEY-IN-KEY-VALUE-PAIR": "En eller flere nøgler er ugyldige. Det skal være en gyldig tekstværdi",
+    "INVALID-VALUE-IN-KEY-VALUE-PAIR": "En eller flere værdier er ugyldige. Det skal være en gyldig tekstværdi"
   },
   "PROFILES": {
     "NAME": "LoRaWAN profiler",
