--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -198,10 +198,33 @@
     "AUTHORIZATIONHEADER": "Authorization header",
     "NO-AUTHORIZATIONHEADER": "Ingen Authorization header angivet",
     "ADD-TO-OPENDATADK": "Send data til OpenDataDK",
-    "OPENDATA-DK": "OpenDataDK",
+    "OPENDATA-DK": {
+      "TYPE": "OpenDataDK",
+      "NAME": "Open Data DK",
+      "DESCRIPTION": "Offentliggør datasæt i Open Data DK's åbne dataportal."
+    },
     "NO-OPENDATA-DK": "Der er ikke oprettet nogen datadeling med Open Data DK endnu",
-    "HTTP_PUSH": "HTTP Push",
-    "FIWARE": "FIWARE"
+    "HTTP_PUSH": {
+      "TYPE": "HTTP Push",
+      "NAME": "Generisk HTTP Push",
+      "DESCRIPTION": "Send data med HTTP POST requests til et HTTP URL endpoint"
+    },
+    "FIWARE": {
+      "TYPE": "FIWARE",
+      "NAME": "FIWARE connection",
+      "DESCRIPTION": "En integration til FIWARE Context Broker"
+    },
+    "MQTT": {
+      "TYPE": "MQTT",
+      "NAME": "MQTT forbindelse",
+      "DESCRIPTION": "En integration til MQTT Broker",
+      "BROKER-URL": "Broker URL",
+      "PORT": "Port",
+      "TOPIC": "Topic",
+      "QOS": "QoS",
+      "USERNAME": "Brugernavn",
+      "PASSWORD": "Adgangskode"
+    }
   },
   "MULTICAST": {
     "SAVE": "Gem multicast",
@@ -555,7 +578,25 @@
       "SELECT-DEVICES": "Vælg enheder",
       "SELECTALLDEVICES": "Vælg alle",
       "DESELECTALLDEVICES": "Fravælg alle",
-      "RELATIONS": "*Efter oprettelse af dit data target parres dette med en/flere payload decoder(s) og IoT-devices"
+      "RELATIONS": "*Efter oprettelse af dit data target parres dette med en/flere payload decoder(s) og IoT-devices",
+      "MQTT": {
+        "GIVE-URL": "Angiv datatargets broker URL",
+        "GIVE-URL-PLACEHOLDER": "https://min-mqtt-broker.dk",
+        "GIVE-PORT": "Angiv datatargets broker port",
+        "GIVE-PORT-PLACEHOLDER": "1883",
+        "GIVE-QOS": "Angiv hvilken QoS niveau data skal sendes med",
+        "GIVE-QOS-PLACEHOLDER": "0, 1, 2",
+        "GIVE-QOS-INFO": "QoS (Quality of Service) bestemmer vigtigheden af, at en besked leveres til modtageren. Se dokumentationen for at vide mere.",
+        "GIVE-TOPIC": "Angiv hvilket topic på brokeren der skal sendes til",
+        "GIVE-TOPIC-PLACEHOLDER": "device/+/event",
+        "GIVE-AUTHENTICATION-METHOD": "Vælg autentificeringsmetode",
+        "USERNAME-PASSWORD": "Brugernavn og password",
+        "CERTIFICATE": "Certifikat",
+        "USERNAME": "Brugernavn",
+        "GIVE-USERNAME": "Angiv et brugernavn med adgang til brokeren og den valgte topic",
+        "PASSWORD": "Adgangskode",
+        "GIVE-PASSWORD": "Angiv adgangskoden til brugeren"
+      }
     },
     "MULTICAST": {
       "SELECT-DEVICES": "Vælg enheder",
