--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -12,7 +12,8 @@
     "KEY": "Nøgle",
     "VALUE": "Værdi",
     "NAME": "Navn",
-    "DESCRIPTION": "Beskrivelse"
+    "DESCRIPTION": "Beskrivelse",
+    "to": "til"
   },
   "NAV": {
     "DASHBOARD": "Dashboard",
@@ -289,7 +290,9 @@
     "ACTIVE": "Sidst aktiv",
     "DATA": "Data(24 timer)",
     "ORGANISATION": "Organisation",
-    "NAME": "Navn"
+    "NAME": "Navn",
+    "RSSI": "RSSI (dBm)",
+    "SNR": "SNR (dB)"
   },
   "LORA-GATEWAY-TABLE": {
     "NAME": "Navn",
@@ -358,7 +361,9 @@
     "DELETE": "Slet",
     "EDIT": "Redigér",
     "SHOW-OPTIONS": "Håndter IoT enhed",
-    "BATTERY-ERROR-MESSAGE":"Den valgte teknologi understøtter ikke batteristatus"
+    "NOT-SUPPORTED": "Ikke understøttet",
+    "NOT-SUPPORTED-SHORT": "-",
+    "NOT-AVAILABLE": "N/A"
   },
   "DATATARGET-TABLE-ROW": {
     "DELETE": "Slet datatarget",
@@ -737,10 +742,10 @@
     },
     "CREATED": "Oprettet",
     "UPDATED": "Senest opdateret",
+    "DATA-PACKETS": "Datapakker",
     "DEVICEMODEL": "Device model",
     "DEVICEMODEL-ERROR": "Der er ikke tilknyttet nogen device model endnu",
     "DETAIL": "Detaljer",
-    "DETAIL-TAB": "Datapakke",
     "DOWNLINK-TAB": "Downlink",
     "NAME": "Navn",
     "TYPE": "Enhedstype",
@@ -783,6 +788,13 @@
       "ENDPRODUCTCERTIFICATE": "Produkt certifikat",
       "DEVICETYPE": "Enhedstypen",
       "DEVICEID": "EnhedsId"
+    },
+    "HISTORY": "Historik",
+    "HISTORY-TAB": {
+      "DATA-RATE": "Data rate",
+      "SNR": "SNR",
+      "RSSI": "RSSI",
+      "HISTORY-NOT-SUPPORTED": "Understøttes ikke af denne teknologi"
     }
   },
   "MESSAGE": {
@@ -1047,7 +1059,6 @@
     }
   },
   "NoUsersAdded": "Ingen brugergrupper er tilføjet",
-
   "FIWARE": {
       "QUESTION": {
         "GIVE-DATATARGET-CONTEXTBROKER-URL": "Angiv datatargets 'context broker' URL",
@@ -1059,6 +1070,8 @@
         "GIVE-DATATARGET-CONTEXT-INFO": "hvis tom, skal den angives i 'payload'",
         "GIVE-DATATARGET-CONTEXT-PLACEHOLDER": "https://os2iot/context-file.json"
       }
-
+  },
+  "GRAPH": {
+    "NO-DATA": "Der er ingen data at vise"
   }
 }
