Feature/iot 1249 manage kombit users (#82)
* First changes to management of kombit users.

* i18n translations

* Made the form page for entering email and wanted organizations. Redirect to new page when entering and succes. Not possible to enter awaiting-page or new-user page manually by url

* NewKombitUser page done, ready for user information page

* User page. Need to fix console error "undefined length"

* Changed name so it's more clear that it's requestedOrganizations and not actual organizations. Started on moving userpage link and login to top right corner.

* moved help and log out buttons to top right corner

* Next step is to fit padding in top bar. Styling.

* Css styling

* removing if statement. Top bar should visible when first time entering from kombit

* Sending an array of ids instead of org object. OBS on undefined on find.

* fixed undefined on find. Changed some variable names. Removed search bar and user-page when first time login from kombit, but possible to log out.

* Made admin/users so there is two tables. One for existing users and one for users applying. Next step is to make the approve and reject buttons and functionality.

* Made acceptuser page when some user is requesting access to organization.

* Can only press once. Also changed back so new-user back is only called when a user from kombit is logged in and has no email. This specific flow has not been tested since it's not possible to create a test kombit user locally.

* Changed some endpoints so page is allowed

* Changed RejectUserDto to have all the info about the rejected user

Minor code improvements

* Minor code style improvements

Co-authored-by: August Andersen <aha@iterator-it.dk>
Co-authored-by: nlg <nlg@iterator-it.dk>

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -915,6 +915,8 @@
     }
   },
   "USERS": {
+    "AWAITING-USERS": "Afventende brugere",
+    "EXISTING-USERS": "Tilknyttede brugere",
     "SAVE": "Gem",
     "NAME": "Navn",
     "EMAIL": "Email",
@@ -924,9 +926,15 @@
     "EDIT": "Redigér User",
     "CREATE": "Opret ny bruger",
     "LOGIN": "Sidst aktiv",
+    "DIALOG": {
+      "QUESTION-REJECT": "Er du sikker på, at du vil afvise brugeren?",
+      "HEAD-REJECT": "Afvis bruger"
+    },
     "TABLE-ROW": {
       "EDIT": "Redigér",
-      "DELETE": "Slet"
+      "DELETE": "Slet",
+      "APPROVE": "Godkend",
+      "REJECT": "Afvis"
     },
     "FORM": {
       "NAME": "Indtast det fulde navn på brugeren",
@@ -957,6 +965,10 @@
     "GLOBAL_ADMIN": {
       "TRUE": "Ja",
       "FALSE": "Nej"
+    },
+    "ACCEPT-USER": {
+      "ACCEPT": "Godkend bruger",
+      "QUESTION-ACCEPT": "Vælg brugergruppe til "
     }
   },
   "AUTH": {
@@ -991,6 +1003,7 @@
     "CLOSE": "Annuller",
     "OK": "Ok",
     "DIALOG-CONFIRM": "Ja, slet",
+    "DIALOG-REJECT": "Ja, afvis",
     "OPENDATADK": {
       "OK": "Send mail til OpenDataDk",
       "CLOSE": "Nej, tak",
@@ -1029,6 +1042,19 @@
     "FIRST_PAGE": "Første side",
     "LAST_PAGE": "Sidste side",
     "OF": "af"
+  },
+  "NEW_USER": {
+    "FIRST_LOGIN": "Siden dette er dit første login, bedes du udfylde din mail og de organisationer du ønsker at være medlem af."
+  },
+  "USER_PAGE": {
+    "AWAITING_CONFIRMATION": "Din bruger er oprettet og afventer bekræftelse fra administratorer på de organisationer du har søgt tilknytning.",
+    "APPLY_ORGANISATIONS": "Søg tilknytning til andre organisationer",
+    "APPLIED_ORGANISATIONS": "Der er pt søgt eller allerede eksisterende tilknytning til følgende organisationer:",
+    "QUESTION_APPLY_ORGANISATIONS": "Ønsker du at søge tilknytning til andre organisationer?",
+    "USER_PAGE": "Organisationstilknytning",
+    "NO_APPLIED_ORGS": "Du har ikke søgt tilknytning til nogle organisationer..",
+    "NO_ORGS": "Der findes ikke yderligere organisationer.."
+
   },
   "false": "Nej",
   "true": "Ja",
