--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -211,7 +211,7 @@
       "DESCRIPTION": "Offentliggør datasæt i Open Data DK's åbne dataportal."
     },
     "NO-OPENDATA-DK": "Der er ikke oprettet nogen datadeling med Open Data DK endnu",
-    "HTTP-PUSH": {
+    "HTTP_PUSH": {
       "TYPE": "HTTP Push",
       "NAME": "Generisk HTTP Push",
       "DESCRIPTION": "Send data med HTTP POST requests til et HTTP URL endpoint"
