Fix user admin name

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -481,7 +481,7 @@
   },
   "PERMISSION-TYPE": {
     "GlobalAdmin": "Global administrator",
-    "OrganizationUserAdmin": "Brugeradministrator administrator",
+    "OrganizationUserAdmin": "Brugeradministrator",
     "OrganizationGatewayAdmin": "Gateway administrator",
     "OrganizationApplicationAdmin": "Applikationsadministrator",
     "Read": "Læserettigheder"
