Show all requested users for user admins

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -986,7 +986,8 @@
     },
     "ACCEPT-USER": {
       "ACCEPT": "Godkend bruger",
-      "QUESTION-ACCEPT": "Vælg brugergruppe til "
+      "QUESTION-ACCEPT": "Vælg brugergruppe til ",
+      "IN-ORGANIZATION": "i organisationen "
     }
   },
   "AUTH": {
