--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -1068,11 +1068,11 @@
   "USER_PAGE": {
     "AWAITING_CONFIRMATION": "Din bruger er oprettet og afventer bekræftelse fra administratorer på de organisationer du har søgt tilknytning.",
     "APPLY_ORGANISATIONS": "Søg tilknytning til andre organisationer",
-    "APPLIED_ORGANISATIONS": "Der er pt søgt eller allerede eksisterende tilknytning til følgende organisationer:",
+    "APPLIED_ORGANISATIONS": "Der er pt. søgt eller allerede eksisterende tilknytning til følgende organisationer:",
     "QUESTION_APPLY_ORGANISATIONS": "Ønsker du at søge tilknytning til andre organisationer?",
     "USER_PAGE": "Organisationstilknytning",
-    "NO_APPLIED_ORGS": "Du har ikke søgt tilknytning til nogle organisationer..",
-    "NO_ORGS": "Der findes ikke yderligere organisationer.."
+    "NO_APPLIED_ORGS": "Du har ikke søgt tilknytning til nogle organisationer.",
+    "NO_ORGS": "Der findes ikke yderligere organisationer."
 
   },
   "false": "Nej",
