--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -203,7 +203,13 @@
     "CONTEXT": "Context",
     "NO-CONTEXT": "Ingen Context angivet",
     "AUTHORIZATIONHEADER": "Authorization header",
+    "TOKENENDPOINT": "Token Endpoint URL",
+    "CLIENTID": "Client ID",
+    "CLIENTSECRET": "Client Secret",
     "NO-AUTHORIZATIONHEADER": "Ingen Authorization header angivet",
+    "NO-TOKENENDPOINT": "No token endpoint URL",
+    "NO-CLIENTID": "No Client ID",
+    "NO-CLIENTSECRET": "No Client Secret",
     "ADD-TO-OPENDATADK": "Send data til OpenDataDK",
     "OPENDATA-DK": {
       "TYPE": "OpenDataDK",
@@ -533,6 +539,9 @@
     "GIVE-DATATARGET-NAME-PLACEHOLDER": "Datatarget's navn",
     "GIVE-DATATARGET-TIMEOUT": "Timeout i millisekunder",
     "GIVE-DATATARGET-AUTHORIZATIONHEADER": "Angiv authorization header",
+    "GIVE-DATATARGET-TOKENENDPOINT": "Token Endpoint URL",
+    "GIVE-DATATARGET-CLIENTID": "Client ID",
+    "GIVE-DATATARGET-CLIENTSECRET": "Client Secret",
     "GIVE-DATATARGET-URL": "Angiv datatargets URL",
     "GIVE-DATATARGET-URL-PLACEHOLDER": "https://datatarget.dk/data",
     "GIVE-PAYLOADDECODER-NAME": "Navngiv payload decoder",
