--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -203,7 +203,13 @@
     "CONTEXT": "Context",
     "NO-CONTEXT": "Ingen Context angivet",
     "AUTHORIZATIONHEADER": "Authorization header",
+    "TOKENENDPOINT": "Token endpoint URL",
+    "CLIENTID": "Client ID",
+    "CLIENTSECRET": "Client secret",
     "NO-AUTHORIZATIONHEADER": "Ingen Authorization header angivet",
+    "NO-TOKENENDPOINT": "Ingen token endpoint URL",
+    "NO-CLIENTID": "Ingen client ID",
+    "NO-CLIENTSECRET": "Ingen client secret",
     "ADD-TO-OPENDATADK": "Send data til OpenDataDK",
     "OPENDATA-DK": {
       "TYPE": "OpenDataDK",
@@ -553,7 +559,7 @@
     "GIVE-PAYLOADDECODER-PAYLOAD-INVALID-JSON": "Det angivne JSON var ikke gyldigt i feltet payload",
     "GIVE-ORGANISATION-NAME": "Navngiv organisation",
     "GIVE-ORGANISATION-NAME-PLACEHOLDER": "F.eks. 'Aarhus Kommune'",
-    "GIVE-MULTICAST-NAME":"Navngiv multicast",
+    "GIVE-MULTICAST-NAME": "Navngiv multicast",
     "GIVE-MULTICAST-ADDRESS": "Angiv multicast adressen (mcAddr)",
     "GIVE-MULTICAST-NETWORK-KEY": "Angiv multicast network session key (mcNwkSKey)",
     "GIVE-MULTICAST-APPLICATION-KEY": "Angiv multicast application session key (mcAppSKey)",
@@ -1107,15 +1113,21 @@
   },
   "NoUsersAdded": "Ingen brugergrupper er tilføjet",
   "FIWARE": {
-      "QUESTION": {
-        "GIVE-DATATARGET-CONTEXTBROKER-URL": "Angiv datatargets 'context broker' URL",
-        "GIVE-DATATARGET-CONTEXTBROKER-URL-PLACEHOLDER": "https://contextBroker.dk/",
-        "GIVE-DATATARGET-TENANT": "Angiv 'tenant'",
-        "GIVE-DATATARGET-TENANT-INFO": "hvis tom, vil default tenant blive brugt",
-        "GIVE-DATATARGET-TENANT-PLACEHOLDER": "Tenant's navn",
-        "GIVE-DATATARGET-CONTEXT": "Angiv 'context'",
-        "GIVE-DATATARGET-CONTEXT-INFO": "hvis tom, skal den angives i 'payload'",
-        "GIVE-DATATARGET-CONTEXT-PLACEHOLDER": "https://os2iot/context-file.json"
-      }
+    "QUESTION": {
+      "GIVE-DATATARGET-CONTEXTBROKER-URL": "Angiv datatargets 'context broker' URL",
+      "GIVE-DATATARGET-CONTEXTBROKER-URL-PLACEHOLDER": "https://contextBroker.dk/",
+      "GIVE-DATATARGET-TENANT": "Angiv 'tenant'",
+      "GIVE-DATATARGET-TENANT-INFO": "hvis tom, vil default tenant blive brugt",
+      "GIVE-DATATARGET-TENANT-PLACEHOLDER": "Tenant's navn",
+      "GIVE-DATATARGET-CONTEXT": "Angiv 'context'",
+      "GIVE-DATATARGET-CONTEXT-INFO": "hvis tom, skal den angives i 'payload'",
+      "GIVE-DATATARGET-CONTEXT-PLACEHOLDER": "https://os2iot/context-file.json",
+      "GIVE-DATATARGET-TOKENENDPOINT": "Angiv token endpoint URL",
+      "GIVE-DATATARGET-TOKENENDPOINT-PLACEHOLDER": "https://os2iot/connect/token",
+      "GIVE-DATATARGET-CLIENTID": "Angiv client ID",
+      "GIVE-DATATARGET-CLIENTID-PLACEHOLDER": "Client's navn",
+      "GIVE-DATATARGET-CLIENTSECRET": "Angiv client secret",
+      "GIVE-DATATARGET-CLIENTSECRET-PLACEHOLDER": "Client's kode"
+    }
   }
 }
